updated html for gallery

--- a/collection.html
+++ b/collection.html
@@ -17,7 +17,7 @@
             </nav>
         </aside>
         <main class="gallery-grid">
-            <a href="gallery1.html" class="gallery-item">I</a>
+            <a href="gallery_1.html" class="gallery-item">I</a>
             <!-- Add more galleries as needed -->
         </main>
     </div>
