--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </ul>
             </nav>
         </aside>
-        <main>
+        <main class="index-main">
             <h2>Welcome to My Gallery</h2>
             <p>Click "Collection" to explore the galleries.</p>
         </main>
