--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <aside class="site-menu">
-            <h1><a href="index.html">My Gallery</a></h1>
+            <h1><a href="index.html">NNXIEI</a></h1>
             <nav>
                 <ul>
                     <li><a href="collection.html">Collection</a></li>
@@ -17,8 +17,8 @@
             </nav>
         </aside>
         <main class="index-main">
-            <h2>Welcome to My Gallery</h2>
-            <p>Click "Collection" to explore the galleries.</p>
+            <h2>Santiago, Chile</h2>
+            <p>2024</p>
         </main>
     </div>
 </body>
