update to auto tittle

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Gallery</title>
+    <title>{{ site.site_title }}</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="container">
         <aside class="site-menu">
-            <h1><a href="index.html">NNXIEI</a></h1>
+            <h1><a href="index.html">{{ site.site_title }}</a></h1>
             <nav>
                 <ul>
                     <li><a href="collection.html">Collection</a></li>
