--- a/gallery_1.html
+++ b/gallery_1.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <aside class="site-menu">
-            <h1><a href="index.html">{{ site.site_title }}</a></h1>
+            <h1><a href="index.html">{{ site.title }}</a></h1>
             <nav>
                 <ul>
                     <li><a href="collection.html">Collection</a></li>
