--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-
+---
+layout: base
+---
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
