--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: base
 <body>
     <div class="container">
         <aside class="site-menu">
-            <h1><a href="index.html">{{ site.title }}</a></h1>
+            <h1><a href="https://nnxiei.github.io/">{{ site.title }}</a></h1>
             <nav>
                 <ul>
                     <li><a href="collection.html">Collection</a></li>
@@ -17,6 +17,7 @@ layout: base
             </nav>
         </aside>
         <main class="index-main">
+            <img src="assets/images/index/DSCF0136.jpg" alt="Index Image">
             <h2>Santiago, Chile</h2>
             <p>2024</p>
         </main>
