--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: base
             </nav>
         </aside>
         <main class="index-main">
-            <img src="assets/images/index/DSCF0136.jpg" alt="Index Image">
+            <img src="assets/images/index/DSCF0136.JPG" alt="Index Image">
             <h2>Santiago, Chile</h2>
             <p>2024</p>
         </main>
