style index main text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: base
         </aside>
         <main class="index-main">
             <img src="assets/images/index/DSCF0136.JPG" alt="Index Image">
-            <h2>Santiago, Chile</h2>
+            <p>Santiago, Chile</p>
             <p>2024</p>
         </main>
     </div>
