--- a/collection.html
+++ b/collection.html
@@ -1,5 +1,7 @@
 ---
 layout: base
+title: Collection
+---
 ---
 <head>
     <meta charset="UTF-8">
@@ -17,10 +19,13 @@ layout: base
                 </ul>
             </nav>
         </aside>
-        <main class="gallery-grid">
-            <a href="gallery_1.html" class="gallery-item">I</a>
-            <!-- Add more galleries as needed -->
-        </main>
+        <div class="gallery-grid">
+            {% for gallery in site.data.galleries %}
+            <a href="{{ gallery.href }}" class="gallery-item" style="background-image: url('{{ gallery.thumbnail }}');">
+              <span>{{ gallery.title }}</span>
+            </a>
+            {% endfor %}
+        </div>
     </div>
 </body>
 </html>
