--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ layout: base
                 </ul>
             </nav>
         </aside>
-        <main class="index-main">
+        <div class="index-main">
             <img src="assets/images/index/DSCF0136.JPG" alt="Index Image">
             <p>Santiago, Chile</p>
             <p>2024</p>
-        </main>
+        </div>
     </div>
 </body>
 </html>
