--- a/gallery_1.html
+++ b/gallery_1.html
@@ -2,12 +2,14 @@
 layout: base
 title: Gallery 1
 gallery_folder: assets/images/gallery_1/
+subtitle: Mater Dolorosa
+subsubtitle: 1995
 ---
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery 1</title>
+    <title>{{page.title}}</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -20,14 +22,18 @@ gallery_folder: assets/images/gallery_1/
                 </ul>
             </nav>
         </aside>
-        <div class="gallery-horizontal">
-            {% assign gallery_folder = page.gallery_folder %}
-            {% for image in site.static_files %}
-              {% if image.path contains gallery_folder %}
-                <img src="{{ image.path }}" alt="Gallery Image">
-              {% endif %}
-            {% endfor %}
-        </div>
+            <div class="gallery-horizontal">
+                <div class="text-wrapper">
+                    <h2>{{page.subtitle}}</h2><p><br></p><p>{{page.subsubtitle}}<br></p>
+                </div>
+                {% assign gallery_folder = page.gallery_folder %}
+                {% for image in site.static_files %}
+                {% if image.path contains gallery_folder %}
+                    <img src="{{ image.path }}" alt="Gallery Image">
+                {% endif %}
+                {% endfor %}
+            </div>
+
     </div>
 </body>
 </html>
