--- a/collection.html
+++ b/collection.html
@@ -14,9 +14,7 @@ title: Collection
         <aside class="site-menu">
             <h1><a href="index.html">{{ site.title }}</a></h1>
             <nav>
-                <ul>
-                    <li><a href="collection.html">Collection</a></li>
-                </ul>
+                <a href="collection.html">Collection</a>               
             </nav>
         </aside>
         <div class="gallery-grid">
