--- a/gallery_1.html
+++ b/gallery_1.html
@@ -17,9 +17,7 @@ subsubtitle: 1995
         <aside class="site-menu">
             <h1><a href="index.html">{{ site.title }}</a></h1>
             <nav>
-                <ul>
-                    <li><a href="collection.html">Collection</a></li>
-                </ul>
+                <a href="collection.html">Collection</a>               
             </nav>
         </aside>
             <div class="gallery-horizontal">
