--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@ layout: base
         <aside class="site-menu">
             <h1><a href="https://nnxiei.github.io/">{{ site.title }}</a></h1>
             <nav>
-                <ul>
-                    <li><a href="collection.html">Collection</a></li>
-                </ul>
+                <a href="collection.html">Collection</a>               
             </nav>
         </aside>
         <div class="index-main">
